Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.3.xx
DATE 0x/xx/2008
14th Alpha Release

NEWS:


NEW: [features/improvements]
+Add support for using container lexers to extend supported languages
+Add support for highlighting Mako and Django templates
+New version of CodeBrowser (Adds C and Ruby Support)
+New version of Launch (file to run can be selected without buffer change)
+Minor updates to FileBrowser
+Automatically fill search field with selected text in buffer when performing
a search action.
+Show Shelf menu command keybinding is now configurable
+Some Vi emulation improvements
+More responsive notebook tab scrolling
+Improved Python auto-indentation
+Opening files after program launch will now be opened in the running instance
instead of creating a separate running instance using the user preference
settings for opening new files in tabs or windows.
+Updated translations
+Shelf window tabs are now shown on the bottom to keep the shelf controls
closer to the editor buffer.
+Add Revert to Saved menu action for reverting a file back to the last save
point.

BUG FIXES:
+Add missing Portuguese locale files to setup script
+Fix some clipboard and dnd bugs
+Fix window scrolling issue when executing some vi commands
+Fix error when creating file position cache file fails
+Fix numerous Style Editor bugs

#-----------------------------------------------------------------------------#

VERSION 0.3.15
DATE 06/15/2008
13th Alpha Release

NEWS:

This release was originally intended to be a minor bug fix release but has
expanded to include a number of new features and additions as well. The most
visual change is the new application icon that was designed and submitted to
the community forum by Kurt Schelin. 

All of the bundled plugins have recieved overhauls and updates. From this