@@ -16,6 +16,7 @@ NEWS:
 
 
 NEW: [features/improvements]
++Add IPC server for remotely controlling Editra and sending commands
 +Add support for using container lexers to extend supported languages
 +Add support for highlighting Mako and Django templates
 +New version of CodeBrowser (Adds C and Ruby Support)
